--- a/style.css
+++ b/style.css
@@ -511,3 +511,18 @@ body {
 .music-button {
   transition: fill 0.5s ease;
 }
+
+.slider {
+    overflow: hidden;
+    position: relative;
+}
+
+.slides-wrapper {
+    display: flex;
+    transition: transform 1s ease-out;
+}
+
+.slide {
+    flex-shrink: 0;
+    width: 100%;
+}
